name:                hec
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/elpinal/hec
license:             BSD3
license-file:        LICENSE
author:              El Pin Al
maintainer:          example@example.com
copyright:           2017 El Pin Al
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Compile
                     , Gen
                     , Inter
                     , Parser
                     , Scanner
                     , Refine.Parse
                     , Refine.Inter
                     , Refine.Asm
                     , Refine.Gen
                     , Refine.Type
                     , Refine.Kind
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
                     , safe
                     , mtl
  default-language:    Haskell2010

executable hec
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hec
  default-language:    Haskell2010

test-suite hec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hec
                     , hspec
                     , safe
                     , containers
                     , parsec
                     , mtl >= 2.2.1
  other-modules:       ParserSpec
                     , ScannerSpec
                     , Refine.ParseSpec
                     , Refine.InterSpec
                     , Refine.GenSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/elpinal/hec
